--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.12.0",
     "@mui/x-data-grid": "^6.0.4",
+    "@mui/x-date-pickers": "^6.18.2",
+    "@react-google-maps/api": "^2.19.2",
     "apexcharts": "^3.37.0",
     "axios": "^1.3.4",
     "change-case": "^4.1.2",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.10",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
