--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.10",
     "formik": "^2.2.9",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
